resource_owner has been changed to refer to tb_user table